# qml6-archetype

./: .gitignore  App.qml  CMakeLists.txt  README.md  images.qrc  main.cpp
app/: Body.qml  Head.qml  Window.qml
